<resources>
    <string name="app_name">Project5</string>
    <string name="order_pizza">Order Pizza</string>
    <string name="see_your_orders">See your orders</string>
    <string name="cart">Cart</string>
    <string name="ru_pizzaria">RU PIZZARIA!</string>
    <string name="current_orders">Current Orders</string>
    <string name="store_orders">Store Orders</string>
    <string name="order_here">Order Here!</string>
    <string name="details_about_the_order">Details about the order</string>
    <string name="_0_00">$0.00</string>
    <string name="order_name">Order Name</string>
    <string name="substotal">substotal</string>
    <string name="total">Total</string>
    <string name="subtotal">Subtotal</string>
    <string name="textview">TextView</string>
    <string name="checkbox">CheckBox</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="add_to_order">Add to Order</string>
    <string name="subtotal_colon">Subtotal:</string>
    <string name="order_details">Order Details:</string>
    <string name="order">Order #</string>
    <string name="order_image">Order image</string>
    <string name="tax">Tax:</string>
    <string name="total_colon">Total:</string>
    <string name="back_button">Back</string>
    <string name="clear_order">Clear Order</string>
    <string name="txt">txt</string>
    <string name="order_number_pound">Order #</string>
    <string name="pound">#</string>
    <string name="price">Price:</string>
    <string name="topping_menu">Toppings Menu</string>
    <string name="pizza_logo_image">Pizza Logo Image</string>
    <string name="price_cost">price_cost</string>
    <string name="order_button">Order</string>
    <string name="order_page_image">Order Page Image</string>
    <string name="crust_type">crust_type</string>
    <string name="crust_colon">Crust:</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="bbq_chicken">BBQ CHICKEN</string>
    <string name="provolone">PROVOLONE</string>
    <string name="cheddar">CHEDDAR</string>
    <string name="beef">BEEF</string>
    <string name="ham">HAM</string>
    <string name="pineapple">PINEAPPLE</string>
    <string name="olives">OLIVES</string>
    <string name="spinach">SPINACH</string>
    <string name="sausage">SAUSAGE</string>
    <string name="pepperoni">PEPPERONI</string>
    <string name="green_pepper">GREEN PEPPER</string>
    <string name="onion">ONION</string>
    <string name="mushroom">MUSHROOM</string>
    <string name="cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="topping_menu_activity">Topping Menu</string>
    <string name="topping_name">Topping Name</string>
</resources>