<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#490DB4"
    android:backgroundTint="#7E7A6AD5"
    tools:context=".OrderPage">

    <!-- Spinner for Pizza Choice -->

    <TextView
        android:id="@+id/priceWordTextView"
        android:layout_width="53dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/typeOfPizzaSpinner"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="112dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderHereWordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/order_here"
        android:textColor="#33116A"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Spinner
        android:id="@+id/typepizzaChoiceSpinner"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="190dp"
        android:layout_height="59dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/order_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/back_button"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="216dp"
        android:layout_height="195dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/order_page_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typepizzaChoiceSpinner"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/crustTextView"
        android:layout_width="254dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="100dp"
        android:text="@string/crust_type"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/crustWordTextView"
        android:layout_width="58dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/crust_colon"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/crustTextView"
        app:layout_constraintHorizontal_bias="0.869"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="125dp"
        android:layout_height="163dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="216dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/smallRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/small"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="236dp" />

        <RadioButton
            android:id="@+id/mediumRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="284dp" />

        <RadioButton
            android:id="@+id/largeRadioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/large"
            tools:layout_editor_absoluteX="12dp"
            tools:layout_editor_absoluteY="332dp" />

    </RadioGroup>

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="104dp"
        android:layout_height="29dp"
        android:layout_marginBottom="16dp"
        android:text="@string/price_cost"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/priceWordTextView" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="156dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:selectionRequired="false"
        app:singleSelection="false">

        <!-- Pizza Toppings -->
        <com.google.android.material.chip.Chip
            android:id="@+id/chipBBQChicken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bbq_chicken" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipProvolone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/provolone" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipCheddar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheddar" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipBeef"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beef" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipHam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ham" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPineapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pineapple" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOlives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olives" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSpinach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinach" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipSausage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sausage" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipPepperoni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pepperoni" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipGreenPepper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green_pepper" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOnion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onion" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMushroom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mushroom" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>
