<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#490DB4"
    android:backgroundTint="#7E7A6AD5"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/orderHereButton"
        android:layout_width="240dp"
        android:layout_height="0dp"
        android:layout_marginBottom="26dp"
        android:text="@string/order_here"
        app:layout_constraintBottom_toTopOf="@+id/currentOrdersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />

    <Button
        android:id="@+id/storeOrdersButton"
        android:layout_width="235dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentOrdersButton" />

    <Button
        android:id="@+id/currentOrdersButton"
        android:layout_width="235dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:text="@string/current_orders"
        app:layout_constraintBottom_toTopOf="@+id/storeOrdersButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderHereButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/biryani_bold"
        android:text="@string/ru_pizzaria"
        android:textColor="#33116A"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="331dp"
        android:layout_height="405dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="53dp"
        app:layout_constraintBottom_toTopOf="@+id/orderHereButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>